# s3cix

./: README.md  pyproject.toml
courses/4_Langerak_Introduction_to_RL_in_Interactive_Systems/: README.md  config.yaml  exercises.ipynb  pyproject.toml
courses/4_Langerak_Introduction_to_RL_in_Interactive_Systems/notification_env/: __init__.py  notification_scheduler.py  plotting.py  utils.py  value_iteration.py
courses/5_Oulasvirta_Computational_Rationality/01-Introduction/: getting_started.ipynb
courses/5_Oulasvirta_Computational_Rationality/03-Modelbuilding/: Go_Nogo.ipynb
courses/7_FisFleBac_Biomechanical_RL/: course_myointeract_colab.ipynb
