[project]
name = "rl4hci"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium>=0.29",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "pyyaml>=6.0.3",
    "stable-baselines3[extra]>=2.8.0",
    "ipykernel>=7.3.0",
    "ipywidgets>=8.1.8",
]
